MComix 0.98

    - The last-read-page module now falls back to pysqlite2 if sqlite3 isn't
      available.

    - The library can now scan directories for new files every time it is
      started, and automatically add new books. Watched directories can be
      edited with the "Watch list" button in the library main window.

MComix 0.97.1
Release date: 18.02.2012

    - Corrected libunrar regression. (thanks to Giovanni Scafora for pointing
      this out)

MComix 0.97
Release date: 17.02.2012

    - Fixed segmentation fault on x64 platforms when trying to extract RAR
      archives with libunrar.

    - The lens now uses the original pixbuf when preparing the magnified image
      instead of the already scaled pixbuf that is shown in MComix' display
      area. In addition, fixed zero division error when trying to use the lens
      on images with width greatly exceeding height.

    - If 'Auto load last opened file' was enabled in the preferences, MComix
      would try to load an invalid path if no file was opened when MComix was
      last closed.

    - Menu item hotkeys can now be changed by hovering over a menu item with
      the mouse and pressing the desired key, or key combination.
      (by Juha Sahakangas and Alan Horkan)

    - All other hotkeys (such as keys for scrolling or zooming) can now be
      customized by editing keybindings.conf in MComix' configuration
      directory, i.e. ~/.config/mcomix on Linux or %HOMEPATH%/MComix on
      Windows. MComix must not be running while editing the file, or changes
      will be overwritten once the program exits.

    - Removed error nag box that would pop up after program shutdown on
      Windows occasionally.

    - The order in which files are loaded and displayed can now be customized
      in the "Advanced" tab of the preferences dialog. Files can be sorted
      either by name, file size, or by last-modified date. This change does
      not affect ordering of files inside archives.